nightly update admin added

--- a/server/dashboard/templates/dashboard/chart-view.html
+++ b/server/dashboard/templates/dashboard/chart-view.html
@@ -64,7 +64,7 @@
         options: {
             scales: {
                 x: {
-                    type: 'timeseries',
+                    type: 'time',
                     time: {
                         unit: 'minute'
                     }
