participant update logging

--- a/server/dashboard/templates/dashboard/chart-view.html
+++ b/server/dashboard/templates/dashboard/chart-view.html
@@ -51,6 +51,14 @@
     <canvas id="myChart"></canvas>
 </div>
 
+<svg id="d3svg">
+</svg>
+
+
+<script>
+    const svg = d3.select("d3svg");
+</script>
+
 <script>
     var ctx = document.getElementById('myChart');
     var myChart = new Chart(ctx, {
