--- a/server/dashboard/templates/dashboard/dev-front-card5.html
+++ b/server/dashboard/templates/dashboard/dev-front-card5.html
@@ -1,6 +1,7 @@
 <div class="card">
-    <div class="card-header" id="heading5">    
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapse5" aria-expanded="true" aria-controls="collapse5">
+    <div class="card-header" id="heading5">
+        <button class="btn btn-link" data-toggle="collapse" data-target="#collapse5" aria-expanded="true"
+            aria-controls="collapse5">
             <h4>Tools</h4>
         </button>
     </div>
@@ -10,7 +11,7 @@
                 <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
                     {% csrf_token %}
                     <input type="hidden" id="dev-command" value="generic-command" name="dev-command" />
-                    
+
                     <div class="form-row">
                         <div class="col">
                             Perform a generic job
@@ -22,7 +23,7 @@
                             <select class="form-select form-control m-1" id="generic-command" name="generic-command">
                                 <option selected>Select a generic job</option>
                                 {% for generic_command in generic_command_list %}
-                                    <option value="{{generic_command}}">{{generic_command}}</option>
+                                <option value="{{generic_command}}">{{generic_command}}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -51,7 +52,7 @@
                 <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
                     {% csrf_token %}
                     <input type="hidden" id="dev-command" value="set-device-token" name="dev-command" />
-                    
+
                     <div class="form-row">
                         <div class="col">
                             Set OneSignal Token to a participant.
@@ -63,14 +64,16 @@
                             <select class="form-select form-control m-1" id="username" name="username">
                                 <option selected>Select a User</option>
                                 {% for puser in participant_users %}
-                                    <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} | {{puser.username}}</option>
+                                <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} |
+                                    {{puser.username}}</option>
                                 {% endfor %}
                             </select>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="col">
-                            <input type="text" class="form-control m-1" id="playerid" name="playerid" placeholder="Player ID">
+                            <input type="text" class="form-control m-1" id="playerid" name="playerid"
+                                placeholder="Player ID">
                             <button type="submit" class="btn btn-primary mb-2 m-1">Set</button>
                         </div>
                     </div>
@@ -81,7 +84,7 @@
                 <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
                     {% csrf_token %}
                     <input type="hidden" id="dev-command" value="send-notification-to-user" name="dev-command" />
-                    
+
                     <div class="form-row">
                         <div class="col">
                             Send test notification to a user.
@@ -93,7 +96,8 @@
                             <select class="form-select form-control m-1" id="username" name="username">
                                 <option selected>Select a User</option>
                                 {% for puser in participant_users %}
-                                    <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} | {{puser.username}}</option>
+                                <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} |
+                                    {{puser.username}}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -111,7 +115,7 @@
                 <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
                     {% csrf_token %}
                     <input type="hidden" id="dev-command" value="send-typed-notification-to-user" name="dev-command" />
-                    
+
                     <div class="form-row">
                         <div class="col">
                             Send typed notification to a user.
@@ -123,14 +127,16 @@
                             <select class="form-select form-control m-1" id="username" name="username">
                                 <option selected>Select a User</option>
                                 {% for puser in participant_users %}
-                                    <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} | {{puser.username}}</option>
+                                <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} |
+                                    {{puser.username}}</option>
                                 {% endfor %}
                             </select>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="col">
-                            <select class="form-select form-control m-1" id="notification_type" name="notification_type">
+                            <select class="form-select form-control m-1" id="notification_type"
+                                name="notification_type">
                                 <option selected>Select a Notification Type</option>
                                 <option value="body_only">Body Only</option>
                                 <option value="short_body_title">Short Body and Title</option>
@@ -153,7 +159,7 @@
                 <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
                     {% csrf_token %}
                     <input type="hidden" id="dev-command" value="delete_hourly_tasks" name="dev-command" />
-                    
+
                     <div class="form-row">
                         <div class="col">
                             Delete an hourly-task
@@ -165,7 +171,8 @@
                             <select class="form-select form-control m-1" id="hourly-task-id" name="hourly-task-id">
                                 <option selected>Select an hourly-task</option>
                                 {% for hourly_task in hourly_tasks %}
-                                    <option value="{{hourly_task.id}}">{{hourly_task.id}} | {{hourly_task.name}} | {{hourly_task.str}}</option>
+                                <option value="{{hourly_task.id}}">{{hourly_task.id}} | {{hourly_task.name}} |
+                                    {{hourly_task.str}}</option>
                                 {% endfor %}
                             </select>
                         </div>
