App Aesthetics for JustWalk

--- a/client/src/heartsteps/walking-suggestions/walking-suggestion-times.component.html
+++ b/client/src/heartsteps/walking-suggestions/walking-suggestion-times.component.html
@@ -1,13 +1,7 @@
-<app-form
-    [formGroup]="timesForm"
-    (onSubmit)="updateTimes()"
-    >
+<app-form [formGroup]="timesForm" (onSubmit)="updateTimes()">
     <fieldset>
-        <p>Enter five times during a typical day when you may have an opportunity to take a short walk. HeartSteps will sometimes send you a notification at these times to remind you to get some activity.</p>
-        <app-time-field *ngFor="let time of timeFields"
-            [label]="time.name"
-            [formControlName]="time.key"
-            >
-       </app-time-field>
+        <p>Enter five times during a typical day when you may have an opportunity to take a short walk. JustWalk will sometimes send you a notification at these times to remind you to get some activity.</p>
+        <app-time-field *ngFor="let time of timeFields" [label]="time.name" [formControlName]="time.key">
+        </app-time-field>
     </fieldset>
 </app-form>
