--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -39,7 +39,7 @@
             </li>
         </ul>
     </nav>
-    <p>HeartSteps {{ buildVersion }}, built on {{ buildDate }}</p>
+    <p>JustWalk {{ buildVersion }}, built on {{ buildDate }}</p>
 </article>
 <article *ngIf="staffParticipant">
     <h3>Testing Area</h3>
