--- a/server/dashboard/templates/dashboard/login.html
+++ b/server/dashboard/templates/dashboard/login.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        {% load static %}
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="{% static 'dashboard/style.css' %}" >
-        <title>Login</title>
-        <style>
-            body { padding: 30px; }
-        </style>
-    </head>
+<head>
+  {% load static %}
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="{% static 'dashboard/style.css' %}">
+  <title>Login</title>
+  <style>
+    body {
+      padding: 30px;
+    }
+  </style>
+</head>
 
-    <body>
+<body>
 
   <h2>Login</h2>
-  <p>Use your HeartSteps staff credentials to access the dashboard.</p>    
+  <p>Use your JustWalk staff credentials to access the dashboard.</p>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
