--- a/server/privacy_policy/templates/privacy_policy/privacy_policy.html
+++ b/server/privacy_policy/templates/privacy_policy/privacy_policy.html
@@ -1,52 +1,80 @@
 <html>
-    <head>
-        <title>HeartSteps Privacy Policy</title>
-    </head>
-    <body>
-        <h2>HeartSteps Privacy Policy</h2>
-        <p>Last updated April 10, 2019</p>
-        <p>The HeartSteps application is an open source application developed by the HeartSteps research team. This application is provided at no cost and is intended for use as is.</p>
-        <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of personal information for anyone who has decided to use HeartSteps.</p>
-        <p>If you choose to use my HeartSteps, then you agree to the collection and use of information in relation to this policy. The personal information collected will be used to improve HeartSteps. Your information will not be with anyone outside of the HeartSteps research team, and will only be used as described in this privacy policy.</p>
-        <p>The terms used in this privacy policy have the same meanings as in our Terms and Conditions, which is accessible at HeartSteps unless otherwise defined in this privacy policy.</p>
-        <h3>Information Collection and Use</h3>
-        <p>For a better experience, while using HeartSteps, you may be required to provide certain personally identifiable information, including but not limited to current location, calendar information, physical activity.</p>
-        <p>HeartSteps does use third party services that may collect information used to identify you.</p>
-        <p>Link to privacy policy of third party service providers used by the app</p>
-        <ul>
-            <li>
-                <a href="https://www.google.com/policies/privacy/">Google Play Services</a>
-            </li>
-            <li>
-                <a href="https://onesignal.com/privacy_policy">OneSignal</a>
-            </li>
-        </ul>
-        
-        <h3>Log Data</h3>
-        
-        <p>Whenever you use HeartSteps, in a case of an error data and information are collected (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol ("IP") address, device name, operating system version, the configuration of the app when utilizing HeartSteps, the time and date of your use of HeartSteps, and other statistics.</p>
-        
-        <h3>Cookies</h3>
-        <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.</p>
-        <p>This HeartSteps does not use these "cookies" explicitly. However, the HeartSteps may use third party code and libraries that use "cookies" to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of HeartSteps.</p>
-        <h3>Service Providers</h3>
-        <p>Third-party companies and individuals may be employed due to the following reasons:</p>
-        <ul>
-            <li>To facilitate HeartSteps;</li>
-            <li>To provide the HeartSteps on our behalf;</li>
-            <li>To perform HeartSteps-related services; or</li>
-            <li>To assist us in analyzing how HeartSteps is used.</li>
-        </ul>
-        <p>I want to inform users of HeartSteps that these third parties have access to your personal information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
-        <h3>Security</h3>
-        <p>The HeartSteps research team values your trust in providing us your personal information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and the HeartSteps research team cannot guarantee its absolute security.</p>
-        <h3>Links to Other Sites</h3>
-        <p>HeartSteps may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by HeartSteps. Therefore, HeartSteps strongly advises you to review the privacy policy of these websites. HeartSteps has no control over and assumes no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
-        <h3>Children's Privacy</h3>
-        <p>These Services do not address anyone under the age of 13. HeartSteps does not knowingly collect personally identifiable information from children under 13\. In the case the HeartSteps research team discovers that a child under 13 has provided personal information, the HeartSteps research team will immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact the HeartSteps research team so that we will be able to do necessary actions.</p>
-        <h3>Changes to This Privacy Policy</h3>
-        <p>The HeartSteps research team may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. The HeartSteps research team will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
-        <h3>Contact Us</h3>
-        <p>If you have any questions or suggestions about the HeartSteps Privacy Policy, do not hesitate to contact the HeartSteps research team.</p>
-    </body>
+<head>
+    <title>JustWalk Privacy Policy</title>
+</head>
+<body>
+    <h2>JustWalk Privacy Policy</h2>
+    <p>Last updated January 1, 2022</p>
+    <p>The JustWalk application is an open-source application developed by the JustWalk research team. This application
+        is provided at no cost and is intended for use as is.</p>
+    <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of personal
+        information for anyone who has decided to use JustWalk.</p>
+    <p>If you choose to use my JustWalk, then you agree to the collection and use of information in relation to this
+        policy. The personal information collected will be used to improve JustWalk. Your information will not be with
+        anyone outside of the JustWalk research team, and will only be used as described in this privacy policy.</p>
+    <p>The terms used in this privacy policy have the same meanings as in our Terms and Conditions, which is accessible
+        at JustWalk unless otherwise defined in this privacy policy.</p>
+    <h3>Information Collection and Use</h3>
+    <p>For a better experience, while using JustWalk, you may be required to provide certain personal information,
+        including but not limited to current timezone and physical activity.</p>
+    <p>JustWalk does use third-party services that may collect information used to identify you.</p>
+    <p>Link to privacy policy of third party service providers used by the app</p>
+    <ul>
+        <li>
+            <a href="https://www.google.com/policies/privacy/">Google Play Services</a>
+        </li>
+        <li>
+            <a href="https://onesignal.com/privacy_policy">OneSignal</a>
+        </li>
+    </ul>
+
+    <h3>Log Data</h3>
+
+    <p>Whenever you use JustWalk, in a case of an error data and information are collected (through third party
+        products) on your phone called Log Data. This Log Data may include information such as your device Internet
+        Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing
+        JustWalk, the time and date of your use of JustWalk, and other statistics.</p>
+
+    <h3>Cookies</h3>
+    <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are
+        sent to your browser from the websites that you visit and are stored on your device's internal memory.</p>
+    <p>This JustWalk does not use these “cookies” explicitly. However, the JustWalk may use third party code and
+        libraries that use “cookies” to collect information and improve their services. You have the option to either
+        accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our
+        cookies, you may not be able to use some portions of JustWalk.</p>
+    <h3>Service Providers</h3>
+    <p>Third-party companies and individuals may be employed due to the following reasons:</p>
+    <ul>
+        <li>To facilitate JustWalk;</li>
+        <li>To provide the JustWalk on our behalf;</li>
+        <li>To perform JustWalk-related services; or</li>
+        <li>To assist us in analyzing how JustWalk is used.</li>
+    </ul>
+    <p>We want to inform users of JustWalk that these third parties have access to your personal information. The reason
+        is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the
+        information for any other purpose.</p>
+    <h3>Security</h3>
+    <p>The JustWalk research team values your trust in providing us your personal information, thus we are striving to
+        use commercially acceptable means of protecting it. But remember that no method of transmission over the
+        internet, or method of electronic storage is 100% secure and reliable, and the JustWalk research team cannot
+        guarantee its absolute security.</p>
+    <h3>Links to Other Sites</h3>
+    <p>JustWalk may contain links to other sites. If you click on a third-party link, you will be directed to that site.
+        Note that these external sites are not operated by JustWalk. Therefore, JustWalk strongly advises you to review
+        the privacy policy of these websites. JustWalk has no control over and assumes no responsibility for the
+        content, privacy policies, or practices of any third-party sites or services.</p>
+    <h3>Children's Privacy</h3>
+    <p>These Services do not address anyone under the age of 13\. JustWalk does not knowingly collect personally
+        identifiable information from children under 13\. In the case the JustWalk research team discovers that a child
+        under 13 has provided personal information, the JustWalk research team will immediately delete this from our
+        servers. If you are a parent or guardian and you are aware that your child has provided us with personal
+        information, please contact the JustWalk research team so that we will be able to do necessary actions.</p>
+    <h3>Changes to This Privacy Policy</h3>
+    <p>The JustWalk research team may update our Privacy Policy from time to time. Thus, you are advised to review this
+        page periodically for any changes. The JustWalk research team will notify you of any changes by posting the new
+        Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
+    <h3>Contact Us</h3>
+    <p>If you have any questions or suggestions about the JustWalk Privacy Policy, do not hesitate to contact the
+        JustWalk research team.</p>
+</body>
 </html>
