moved reports to dashboard

--- a/server/dashboard/templates/dashboard/cohorts.html
+++ b/server/dashboard/templates/dashboard/cohorts.html
@@ -19,6 +19,7 @@
         <li><a href="{% url 'dashboard-clock-face-list'%}">View all clock faces</a></li>
         <li><a href="{% url 'dashboard-userlogs-list'%}">View all userlogs</a></li>
         <li><a href="{% url 'dashboard-chart'%}">View all charts</a></li>
+        <li><a href="{% url 'dashboard-report-list'%}">View all reports</a></li>
     </ul>
 </nav>
 
