#299 removed weekly survey

--- a/client/src/pages/home/dashboard-notifications.component.html
+++ b/client/src/pages/home/dashboard-notifications.component.html
@@ -1,5 +1,1 @@
-<nav>
-    <a *ngIf="weeklySurvey" (click)="navigateToWeeklySurvey()">
-        Please complete the weekly reflection
-    </a>
-</nav>
+<!-- no morning survey or weekly survey -->
