--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -9,19 +9,29 @@
                     Contact information
                 </button>
             </li>
-            <li><button (click)="editPlaces()">Places</button></li>
-            <li>
-                <button (click)="editWeeklyReflectionTime()">
-                    Weekly reflection time
-                </button>
-            </li>
-            <ng-container *ngIf="!hasFlag('nlm')">
-                <li><button (click)="editWeeklyGoal()">Weekly goal</button></li>
+            <ng-container *ngIf="hasFlag('places')">
                 <li>
-                    <button (click)="editDailyTimes()">
-                        Activity suggestion time
+                    <button (click)="editPlaces()">
+                        Places
                     </button>
                 </li>
+            </ng-container>
+            <ng-container *ngIf="hasFlag('weekly_reflection')">
+                <li>
+                    <button (click)="editWeeklyReflectionTime()">
+                        Weekly reflection time
+                    </button>
+                </li>
+            </ng-container>
+            <ng-container *ngIf="!hasFlag('nlm')">
+                <li><button (click)="editWeeklyGoal()">Weekly goal</button></li>
+                <ng-container *ngIf="hasFlag('walking_suggestions')">
+                    <li>
+                        <button (click)="editDailyTimes()">
+                            Activity suggestion time
+                        </button>
+                    </li>
+                </ng-container>
             </ng-container>
         </ul>
     </nav>
@@ -32,11 +42,13 @@
                     Fitbit Authorization
                 </button>
             </li>
-            <li>
-                <button (click)="goToFitbitClockFaceSettings()">
-                    Fitbit Clock Face
-                </button>
-            </li>
+            <ng-container *ngIf="hasFlag('fitbit_clock_face')">
+                <li>
+                    <button (click)="goToFitbitClockFaceSettings()">
+                        Fitbit Clock Face
+                    </button>
+                </li>
+            </ng-container>
         </ul>
     </nav>
     <p>JustWalk {{ buildVersion }}, built on {{ buildDate }}</p>
