--- a/client/src/pages/home/dashboard-notifications.component.html
+++ b/client/src/pages/home/dashboard-notifications.component.html
@@ -1,1 +1,13 @@
-<!-- no morning survey or weekly survey -->
+<nav>
+    <ng-container *ngIf="hasFlag('weeklySurvey')">
+        <a *ngIf="weeklySurvey" (click)="navigateToWeeklySurvey()">
+            Please complete the weekly reflection
+        </a>
+    </ng-container>
+
+    <ng-container *ngIf="hasFlag('morningMessage')">
+    <a *ngIf="morningMessage" (click)="navigateToMorningMessage()">
+        Please complete the morning check-in
+    </a>
+    </ng-container>
+</nav>
