--- a/client/src/heartsteps/weather/weather.component.html
+++ b/client/src/heartsteps/weather/weather.component.html
@@ -1,5 +1,9 @@
 <div >
     <ng-content></ng-content>
-    <em *ngIf="!loading">{{high}}/{{low}}</em>
+    <em *ngIf="!loading">
+        <span *ngIf="icon!='unknown'">
+        {{high}}/{{low}}
+        </span>
+    </em>
     <em *ngIf="loading">Loading</em>
 </div>
