#309 added zip code entry section for dashboard form

--- a/server/dashboard/templates/dashboard/dev-front-card5.html
+++ b/server/dashboard/templates/dashboard/dev-front-card5.html
@@ -238,7 +238,9 @@
                     </div>
                     <div class="form-row">
                         <div class="col">
-                            <button type="submit" class="btn btn-primary mb-2 m-1">Send</button>
+                            <input type="text" class="form-control m-1" id="zipcode" name="zipcode"
+                                placeholder="ZIP Code">
+                            <button type="submit" class="btn btn-primary mb-2 m-1">Set</button>
                         </div>
                     </div>
                 </form>
