#309 added ZIP code API, need to make sure it connects

--- a/server/dashboard/templates/dashboard/dev-front-card5.html
+++ b/server/dashboard/templates/dashboard/dev-front-card5.html
@@ -217,7 +217,7 @@
             <li>
                 <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
                     {% csrf_token %}
-                    <input type="hidden" id="dev-command" value="delete_hourly_tasks" name="dev-command" />
+                    <input type="hidden" id="dev-command" value="set_zip_code" name="dev-command" />
 
                     <div class="form-row">
                         <div class="col">
