--- a/server/fitbit_api/templates/fitbit/index.html
+++ b/server/fitbit_api/templates/fitbit/index.html
@@ -1,1 +1,16 @@
-<p>Fitbit authentication is complete. Please go back to JustWalk app.</p>
+<!doctype html>
+<html lang="en">
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>JustWalk Fitbit Authorization Success</title>
+</head>
+<body>
+    <div class="container">
+        <h3>JustWalk Fitbit Authorization Success</h3>
+        <p>
+            Fitbit authorization is complete. Please go back to JustWalk app.
+        </p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+</html>
