--- a/client/src/theme/logo.scss
+++ b/client/src/theme/logo.scss
@@ -9,8 +9,9 @@
     margin: 2em auto;
     &:after {
         content: ' ';
-        mask: url('../assets/heartsteps-logo.svg') no-repeat 50% 50%;
+        mask: no-repeat 50% 50%;
         mask-size: contain;
+        -webkit-mask-box-image: url('../assets/heartsteps-logo.svg');
         width: 100%;
         height: 100%;
         background-color: #ffffff;
