--- a/client/src/pages/home/dashboard-daily-stepgoal.component.html
+++ b/client/src/pages/home/dashboard-daily-stepgoal.component.html
@@ -1,7 +1,11 @@
-<h3>Today's Step Goal</h3>
-<div class="dashboard-daily-stepgoal-container">
-    <p class="step-goal-container">
-        <span class="step-goal-number">{{daily_step_goal}}</span>
-        steps
-    </p>
-</div>
+<!--<h3>Today's Step Goal</h3>-->
+<!--<div class="dashboard-daily-stepgoal-container">-->
+<!--    <p class="step-goal-container">-->
+<!--        <span class="step-goal-number">{{daily_step_goal}}</span>-->
+<!--        steps-->
+<!--    </p>-->
+<!--</div>-->
+<ul>
+    <li>{{dailyStepGoal}} <span>Daily Step Goal</span></li>
+    <li>{{dailyStepsToGo}} <span>Steps to Go</span></li>
+</ul>
