applied HTML style tags to multi-choice (yes/no/maybe) surveys

--- a/client/src/infrastructure/form/choice-field.component.html
+++ b/client/src/infrastructure/form/choice-field.component.html
@@ -1,8 +1,8 @@
 <fieldset class="input-group">
     <legend *ngIf="label"
         class="description"
+        [innerHTML]="label"
         >
-        {{label}}
     </legend>
     <p *ngIf="error && isInvalid"
         class="error"
