--- a/client/src/heartsteps/activity-types/activity-type.scss
+++ b/client/src/heartsteps/activity-types/activity-type.scss
@@ -21,7 +21,7 @@
         width: 2em;
         height: 2em;
         background-color: $text-color;
-        mask-image: url('../assets/activity-default.svg');
+        -webkit-mask-box-image: url('../assets/activity-default.svg');
         mask-repeat: no-repeat;
         mask-position: 50% 50%;
     }
@@ -31,35 +31,35 @@
     }
 
     &.activity-type-aerobic:before {
-        mask-image: url('../assets/activity-aerobic.svg');
+        -webkit-mask-box-image: url('../assets/activity-aerobic.svg');
     }
 
     &.activity-type-bike:before {
-        mask-image: url('../assets/activity-bike.svg');
+        -webkit-mask-box-image: url('../assets/activity-bike.svg');
     }
 
     &.activity-type-elliptical:before {
-        mask-image: url('../assets/activity-elliptical.svg');
+        -webkit-mask-box-image: url('../assets/activity-elliptical.svg');
     }
 
     &.activity-type-run:before {
-        mask-image: url('../assets/activity-run.svg');
+        -webkit-mask-box-image: url('../assets/activity-run.svg');
     }
 
     &.activity-type-swim:before {
-        mask-image: url('../assets/activity-swim.svg');
+        -webkit-mask-box-image: url('../assets/activity-swim.svg');
     }
 
     &.activity-type-sport:before {
-        mask-image: url('../assets/activity-sport.svg');
+        -webkit-mask-box-image: url('../assets/activity-sport.svg');
     }
 
     &.activity-type-walk:before {
-        mask-image: url('../assets/activity-walk.svg');
+        -webkit-mask-box-image: url('../assets/activity-walk.svg');
     }
 
     &.activity-type-weights:before {
-        mask-image: url('../assets/activity-weights.svg');
+        -webkit-mask-box-image: url('../assets/activity-weights.svg');
     }
 }
 
@@ -83,35 +83,35 @@ button.activity-type {
         }
 
         &.activity-type-aerobic:before {
-            mask-image: url('../assets/activity-aerobic.svg');
+            -webkit-mask-box-image: url('../assets/activity-aerobic.svg');
         }
     
         &.activity-type-bike:before {
-            mask-image: url('../assets/activity-bike.svg');
+            -webkit-mask-box-image: url('../assets/activity-bike.svg');
         }
     
         &.activity-type-elliptical:before {
-            mask-image: url('../assets/activity-elliptical.svg');
+            -webkit-mask-box-image: url('../assets/activity-elliptical.svg');
         }
     
         &.activity-type-run:before {
-            mask-image: url('../assets/activity-run.svg');
+            -webkit-mask-box-image: url('../assets/activity-run.svg');
         }
     
         &.activity-type-swim:before {
-            mask-image: url('../assets/activity-swim.svg');
+            -webkit-mask-box-image: url('../assets/activity-swim.svg');
         }
     
         &.activity-type-sport:before {
-            mask-image: url('../assets/activity-sport.svg');
+            -webkit-mask-box-image: url('../assets/activity-sport.svg');
         }
     
         &.activity-type-walk:before {
-            mask-image: url('../assets/activity-walk.svg');
+            -webkit-mask-box-image: url('../assets/activity-walk.svg');
         }
     
         &.activity-type-weights:before {
-            mask-image: url('../assets/activity-weights.svg');
+            -webkit-mask-box-image: url('../assets/activity-weights.svg');
         }
     
     }
@@ -125,35 +125,35 @@ button.activity-type {
         }
 
         &.activity-type-aerobic:before {
-            mask-image: url('../assets/activity-aerobic.svg');
+            -webkit-mask-box-image: url('../assets/activity-aerobic.svg');
         }
     
         &.activity-type-bike:before {
-            mask-image: url('../assets/activity-bike.svg');
+            -webkit-mask-box-image: url('../assets/activity-bike.svg');
         }
     
         &.activity-type-elliptical:before {
-            mask-image: url('../assets/activity-elliptical.svg');
+            -webkit-mask-box-image: url('../assets/activity-elliptical.svg');
         }
     
         &.activity-type-run:before {
-            mask-image: url('../assets/activity-run.svg');
+            -webkit-mask-box-image: url('../assets/activity-run.svg');
         }
     
         &.activity-type-swim:before {
-            mask-image: url('../assets/activity-swim.svg');
+            -webkit-mask-box-image: url('../assets/activity-swim.svg');
         }
     
         &.activity-type-sport:before {
-            mask-image: url('../assets/activity-sport.svg');
+            -webkit-mask-box-image: url('../assets/activity-sport.svg');
         }
     
         &.activity-type-walk:before {
-            mask-image: url('../assets/activity-walk.svg');
+            -webkit-mask-box-image: url('../assets/activity-walk.svg');
         }
     
         &.activity-type-weights:before {
-            mask-image: url('../assets/activity-weights.svg');
+            -webkit-mask-box-image: url('../assets/activity-weights.svg');
         }
     }
 }
