--- a/client/src/pages/activity-plan/day-plan.component.scss
+++ b/client/src/pages/activity-plan/day-plan.component.scss
@@ -16,7 +16,7 @@ activity-plan-day {
             width: 100%;
             height: 100%;
             background-color: $color-primary;
-            mask-image: url('../assets/icon-add.svg');
+            -webkit-mask-box-image: url('../assets/icon-add.svg');
             mask-position: center center;
             mask-size: 150%;
         }
